[package]
name = "mcgrep"
license = "MIT"
version = "0.1.0"
authors = ["Marcus Andersson <marcus@tojoma.se>"]
edition = "2018"
description = "A clone of the popular grep program found in unix-like systenms."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
